# spice__win32__usbclerk

./: LICENSE  Makefile.am  autogen.sh  configure.ac  resource.h  usbclerk.cpp  usbclerk.h  usbclerk.nsis.in  usbclerk.rc  usbclerk.sln  usbclerk.vcproj  usbclerk.wxs.in  usbclerktest.cpp  usbclerktest.vcproj  usbcommon.h  usbredirfilter.h  vdlog.cpp  vdlog.h
VC/: usbredirfilter.c  usbredirfilter.h
